--- a/Practica1/index.html
+++ b/Practica1/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practica 1 con cambios</title>
     <!--link rel="stylesheet" href="main.css"-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
 <body>
     <div class="container-fluid"> crea bordes a la pagina*/
-        <div class="row"> //renglon
+        <div class="row"> //renglon...
             <div class="col-md-12">
                 <div class="jumnbotron">
                     <h2 style="color:blueviolet">hola munodo</h2>
